tests/calico_testcases/example_policies/testcase3/testcase3-networkpolicy-onlyAllow.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase3-networkpolicy-onlyAllow
  namespace: kube-system
spec:
  selector: has(tier)
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: has(app)
  egress:
  - action: Allow
    destination:
      selector: all()
